figured out the spacing issue with the navbar, it wants to justify everything left even though CSS over rides it

--- a/client/src/components/Nav/Nav.css
+++ b/client/src/components/Nav/Nav.css
@@ -1,21 +1,20 @@
 .navbar {
-    max-width: 100%;
+    /* max-width: 100%;
     height: 120px;
-    display: flex;
+    display: flex; */
     /* all children start on right side instead of default left side */
-    justify-content: flex-end;
+    justify-content: center;
     
-    background-color: var(--bg);
+    /* background-color: var(--bg); */
     /* padding: 0 1rem; */
-    border-bottom: var(--border);
+    /* border-bottom: var(--border); */
 
 }
 
-@media (max-width: 991px) and (min-width: 768px);
-.logo {
-    
-}
-header {
+@media (max-width: 991px) and (min-width: 768px){}
+
+.navbar-brand img
+img.nav-image {
     /* margin-right: 20px; */
     margin-top: 20px;
     float: left;
@@ -30,8 +29,44 @@ header {
     height: 90px;
     width: 70px;
     vertical-align: middle;
+    display: flex;
+    padding-left: 10px;
+
     
 }
+nav .navbar {
+  display: flex;
+  /* flex-grow: auto; */
+  /* flex-wrap: nowrap; */
+  justify-content: space-between;
+  align-items: flex-end;
+}
+/* justify-content: flex-end to be right */
+button .navbar-toggler {
+  justify-content: flex-start;
+  margin-left: 200px;
+  border-radius: 50%;
+
+}
+/* button links */
+.navbar-nav {
+  /* justify-content: flex-start; */
+  /* margin-left: 400px; */
+  margin-right: 0;
+  align-items: flex-end;
+  
+}
+
+
+
+
+/* Search bar */
+.form-inline {
+justify-content: center;
+align-self: center;
+}
+
+/*  */
 .button-container {
     align-items: center;
     float: center;
@@ -40,6 +75,7 @@ header {
     width: 100%;
     margin: 0;
     padding: 50px;
+    justify-content: flex-end;
 
 }
 .search-form {
